--- a/packages/libs/coreui/src/stories/Introduction.stories.mdx
+++ b/packages/libs/coreui/src/stories/Introduction.stories.mdx
@@ -114,16 +114,12 @@ import StackAlt from './assets/stackalt.svg';
   
 `}</style>
 
-# Welcome to Storybook TEST
+# Welcome to CoreUI
 
-Storybook helps you build UI components in isolation from your app's business logic, data, and context.
-That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
+Core UI for VeuPathDB applications. Provides components, style definitions, and utilities to enable developers to rapidly
+assemble complex applications with consistent UI and UX across our portfolio of sites.
 
-Browse example stories now by navigating to them in the sidebar.
-View their code in the `src/stories` directory to learn how they work.
-We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
-
-<div className='subheading'>Configure</div>
+<!-- <div className='subheading'>Configure</div>
 
 <div className='link-list'>
   <a
@@ -216,4 +212,4 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
 <div className='tip-wrapper'>
   <span className='tip'>Tip</span>Edit the Markdown in{' '}
   <code>src/stories/Introduction.stories.mdx</code>
-</div>
+</div> -->
