--- a/packages/configs/cra-template/template/README.adoc
+++ b/packages/configs/cra-template/template/README.adoc
@@ -1,17 +1,17 @@
-# Getting Started with Create React App
+== Getting Started with Create React App
 
-This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app), using the [`@veupathdb` template](https://github.com/VEuPathDB/web-dev/packages/cra-template).
+This project was bootstrapped with https://github.com/facebook/create-react-app[Create React App], using the https://github.com/VEuPathDB/web-dev/packages/cra-template[`@veupathdb` template].
 
-## Available Scripts
+=== Available Scripts
 
 In the project directory, you can run:
 
-### `npm start`
+=== `npm start`
 
-Runs the app in the development mode.\
-Open [http://localhost:3000](http://localhost:3000) to view it in the browser.
+Runs the app in the development mode. +
+Open http://localhost:3000[http://localhost:3000] to view it in the browser.
 
-The page will reload if you make edits.\
+The page will reload if you make edits. +
 You will also see any lint errors in the console.
 
 You will be prompted to enter the VEuPathDB BRC Pre-Release Login credentials.
@@ -20,22 +20,22 @@ You will be prompted to enter the VEuPathDB BRC Pre-Release Login credentials.
 
 - **`WDK_SERVICE_URL`** URL for a VEuPathDB service endpoint.
 
-### `npm test`
+=== `npm test`
 
-Launches the test runner in the interactive watch mode.\
-See the section about [running tests](https://facebook.github.io/create-react-app/docs/running-tests) for more information.
+Launches the test runner in the interactive watch mode. +
+See the section about https://facebook.github.io/create-react-app/docs/running-tests[running tests] for more information.
 
-### `npm run build`
+=== `npm run build`
 
-Builds the app for production to the `build` folder.\
+Builds the app for production to the `build` folder. +
 It correctly bundles React in production mode and optimizes the build for the best performance.
 
-The build is minified and the filenames include the hashes.\
+The build is minified and the filenames include the hashes. +
 Your app is ready to be deployed!
 
-See the section about [deployment](https://facebook.github.io/create-react-app/docs/deployment) for more information.
+See the section about https://facebook.github.io/create-react-app/docs/deployment[deployment] for more information.
 
-### `npm run eject`
+=== `npm run eject`
 
 **Note: this is a one-way operation. Once you `eject`, you can’t go back!**
 
@@ -45,8 +45,8 @@ Instead, it will copy all the configuration files and the transitive dependencie
 
 You don’t have to ever use `eject`. The curated feature set is suitable for small and middle deployments, and you shouldn’t feel obligated to use this feature. However we understand that this tool wouldn’t be useful if you couldn’t customize it when you are ready for it.
 
-## Learn More
+== Learn More
 
-You can learn more in the [Create React App documentation](https://facebook.github.io/create-react-app/docs/getting-started).
+You can learn more in the https://facebook.github.io/create-react-app/docs/getting-started[Create React App documentation].
 
-To learn React, check out the [React documentation](https://reactjs.org/).
+To learn React, check out the https://reactjs.org/[React documentation].
