Replace react-scripts README with adoc

--- a/packages/configs/react-scripts/README.adoc
+++ b/packages/configs/react-scripts/README.adoc
@@ -1,24 +1,24 @@
-# @veupathdb/react-scripts
+== @veupathdb/react-scripts
 
-A wrapper for [react-scripts](https://github.com/facebook/create-react-app/tree/master/packages/react-scripts) used for developing VEuPathDB website features.
+A wrapper for https://github.com/facebook/create-react-app/tree/master/packages/react-scripts[react-scripts] used for developing VEuPathDB website features.
 
-## Usage
+=== Usage
 
 First, install the package with npm:
-
-```
+[source, sh]
+----
 npm install --save-dev @veupathdb/react-scripts
-```
+----
 
 or with yarn:
-
-```
+[source, sh]
+----
 yarn add -D @veupathdb/react-scripts
-```
+----
 
 Then, optionally add the following `script` entries to `package.json` in your repo:
-
-```json
+[source, json]
+----
     "scripts": {
       "start": "veupathdb-react-scripts start",
       "build": "veupathdb-react-scripts build",
@@ -28,15 +28,15 @@ Then, optionally add the following `script` entries to `package.json` in your re
       "copy-assets": "veupathdb-react-scripts copy-assets",
       "prepare-npm": "veupathdb-react-scripts prepare"
     }
-```
+----
 
-## Environment Variables
+=== Environment Variables
 
 The following environment variables are used by the `start` script. They may be
 stored in a `.env.local` file located at the project root, or defined in other
 standard ways.
 
-| Variable name          | Description                          | Optional / Required |
-| ---------------------- | ------------------------------------ | ------------------- |
-| `VEUPATHDB_LOGIN_USER` | VEuPathDB BRC Pre-Release user nanme | optional            |
-| `VEUPATHDB_LOGIN_PASS` | VEuPathDB BRC Pre-Release password   | optional            |
+  | Variable name          | Description                          | Optional / Required |
+  | ---------------------- | ------------------------------------ | ------------------- |
+  | `VEUPATHDB_LOGIN_USER` | VEuPathDB BRC Pre-Release user nanme | optional            |
+  | `VEUPATHDB_LOGIN_PASS` | VEuPathDB BRC Pre-Release password   | optional            | 
