--- a/packages/configs/tsconfig/README.adoc
+++ b/packages/configs/tsconfig/README.adoc
@@ -1,21 +1,25 @@
-# @veupathdb/tsconfig
+== @veupathdb/tsconfig
 
 TypeScript configuration used by VEuPathDB websites.
 
-## Usage
+=== Usage
 
 First, install the package with npm:
-```
+[source, sh]
+----
 npm install --save-dev @veupathdb/tsconfig
-```
+----
+
 or with yarn:
-```
+[source, sh]
+----
 yarn add -D @veupathdb/tsconfig
-```
+----
 
 Then, add the following to `tsconfig.json`:
-```json
+[source, json]
+----
 {
   "extends": "@veupathdb/tsconfig/tsconfig.json"
 }
-```
+----
