Update documentation to reflect the difference between @veupathdb/tsconfig and @veupathdb/site-tsconfig

--- a/packages/configs/tsconfig/README.adoc
+++ b/packages/configs/tsconfig/README.adoc
@@ -1,6 +1,6 @@
 == @veupathdb/tsconfig
 
-TypeScript configuration used by VEuPathDB websites.
+Base TypeScript configuration used for individual VEuPathDB client features.
 
 === Usage
 
